@@ -18,7 +18,6 @@ package io.micronaut.data.processor.visitors.finders;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.AnnotationValue;
 import io.micronaut.core.annotation.Experimental;
-import io.micronaut.core.annotation.Introspected;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.expressions.EvaluatedExpressionReference;
@@ -29,10 +28,9 @@ import io.micronaut.data.annotation.By;
 import io.micronaut.data.annotation.DataAnnotationUtils;
 import io.micronaut.data.annotation.Id;
 import io.micronaut.data.annotation.Join;
-import io.micronaut.data.annotation.MappedEntity;
+import io.micronaut.data.annotation.Projection;
 import io.micronaut.data.annotation.QueryHint;
 import io.micronaut.data.annotation.Relation;
-import io.micronaut.data.annotation.RepositoryConfiguration;
 import io.micronaut.data.annotation.TenantId;
 import io.micronaut.data.annotation.TypeRole;
 import io.micronaut.data.annotation.Where;
@@ -56,6 +54,7 @@ import io.micronaut.data.processor.visitors.MatchFailedException;
 import io.micronaut.data.processor.visitors.MethodMatchContext;
 import io.micronaut.inject.annotation.AnnotationMetadataHierarchy;
 import io.micronaut.inject.ast.ClassElement;
+import io.micronaut.inject.ast.MethodElement;
 import io.micronaut.inject.ast.ParameterElement;
 import io.micronaut.inject.ast.PrimitiveElement;
 import jakarta.persistence.criteria.Expression;
@@ -233,11 +232,13 @@ public abstract class AbstractCriteriaMethodMatch implements MethodMatcher.Metho
                             predicates.add(cb.equal(root.get(property.getName()), param));
                         } else {
                             // TODO: support embedded ID
-                            Association association = propPath.getAssociations().get(0);
+                            Association association = propPath.getAssociations().getFirst();
                             if (propPath.getAssociations().size() == 1) {
                                 if (association.isEmbedded()) {
                                     predicates.add(cb.equal(root.get(association.getName()).get(property.getName()), param));
                                 } else if (PersistentEntityUtils.isAccessibleWithoutJoin(association, property)) {
+                                    predicates.add(cb.equal(root.join(association.getName()).get(property.getName()), param));
+                                } else {
                                     predicates.add(cb.equal(root.join(association.getName()).get(property.getName()), param));
                                 }
                             } else {
@@ -697,49 +698,25 @@ public abstract class AbstractCriteriaMethodMatch implements MethodMatcher.Metho
                                                      ClassElement queryResultType,
                                                      FindersUtils.InterceptorMatch interceptorMatch,
                                                      boolean allowEntityResultByDefault) {
-        ClassElement resultType = interceptorMatch.returnType();
-
-        boolean isRuntimeDto = false;
-        boolean isDto = resultType != null
-            && !TypeUtils.areTypesCompatible(resultType, queryResultType)
-            && (isDtoType(matchContext.getRepositoryClass(), resultType) || resultType.hasStereotype(Introspected.class) && queryResultType.hasStereotype(MappedEntity.class));
-
-        if (isDto) {
-            isRuntimeDto = isDtoType(matchContext.getRepositoryClass(), resultType);
-        } else if (interceptorMatch.validateReturnType()) {
-            if (queryResultType != null) {
-                if (resultType == null || !isVoid(resultType)) {
-                    if (resultType == null || TypeUtils.areTypesCompatible(resultType, queryResultType)) {
-                        if (!queryResultType.isPrimitive() || resultType == null) {
-                            resultType = queryResultType;
-                        }
-                    } else if (!allowEntityResultByDefault || !matchContext.getRootEntity().getClassElement().equals(resultType)) {
-                        throw new MatchFailedException("Query results in a type [" + queryResultType.getName() + "] whilst method returns an incompatible type: " + resultType.getName());
-                    }
-                }
-            }
-        }
-        return new MethodResult(resultType, isDto, isRuntimeDto);
-    }
-
-    private boolean isVoid(ClassElement resultType) {
-        return resultType.isAssignable(void.class) || resultType.isAssignable(Void.class) || resultType.getName().equals("kotlin.Unit");
-    }
-
-    private boolean isDtoType(ClassElement repositoryElement, ClassElement classElement) {
-        return Arrays.stream(repositoryElement.stringValues(RepositoryConfiguration.class, "queryDtoTypes"))
-            .anyMatch(type -> classElement.getName().equals(type));
+        return MatchUtils.analyzeMethodResult(matchContext.getRepositoryClass(), matchContext.getRootEntity().getClassElement(), queryResultType, interceptorMatch, allowEntityResultByDefault);
     }
 
     /**
      * Find DTO properties.
      *
-     * @param entity     The entity
-     * @param returnType The result
+     * @param entity        The entity
+     * @param methodElement The method element
+     * @param returnType    The result
      * @return DTO properties
      */
     protected List<SourcePersistentProperty> getDtoProjectionProperties(SourcePersistentEntity entity,
+                                                                        MethodElement methodElement,
                                                                         ClassElement returnType) {
+        List<String> projectionList = methodElement.getAnnotationValuesByType(Projection.class)
+            .stream()
+            .flatMap(a -> a.stringValue().stream())
+            .toList();
+        Iterator<String> iterator = projectionList.iterator();
         return returnType.getBeanProperties().stream()
             .filter(dtoProperty -> {
                 String propertyName = dtoProperty.getName();
@@ -751,6 +728,12 @@ public abstract class AbstractCriteriaMethodMatch implements MethodMatcher.Metho
                 if ("metaClass".equals(propertyName) && dtoProperty.getType().isAssignable("groovy.lang.MetaClass")) {
                     // ignore Groovy meta class
                     return null;
+                }
+                AnnotationValue<Projection> selectAnnotation = dtoProperty.getAnnotation(Projection.class);
+                if (selectAnnotation != null) {
+                    propertyName = selectAnnotation.stringValue().orElse(propertyName);
+                } else if (iterator.hasNext()) {
+                    propertyName = iterator.next();
                 }
                 SourcePersistentProperty pp = entity.getPropertyByName(propertyName);
 
@@ -772,18 +755,6 @@ public abstract class AbstractCriteriaMethodMatch implements MethodMatcher.Metho
                 }
                 return pp;
             }).toList();
-    }
-
-    /**
-     * Method result.
-     *
-     * @param resultType             The result type
-     * @param isDto                  Is DTO
-     * @param isRuntimeDtoConversion Is DTO converted at the runtime
-     */
-    protected record MethodResult(ClassElement resultType,
-                                  boolean isDto,
-                                  boolean isRuntimeDtoConversion) {
     }
 
 }
